--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
 <!-- NAVBAR Main Menu Section -->
 <%- include('partials/navbar') %>
 
+<!-- PRİVATE SEARCH Section -->
+<%- include('section/private-search.ejs') %>
+
+
 
 <div class="hero-slider">
   <div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-1.jpg);">
@@ -370,9 +374,7 @@
 </section>
 
 
-<!--
-Start Call To Action
-==================================== -->
+<!-- Start Call To Action -->
 <section class="call-to-action bg-gray section">
 	<div class="container">
 		<div class="row">
