--- a/views/partials/top-header.ejs
+++ b/views/partials/top-header.ejs
@@ -29,7 +29,7 @@
 			</div>
 			<div class="col-md-4 col-xs-12 col-sm-4">
 				<!-- Cart -->
-				<ul class="top-menu text-right list-inline">
+				<ul class="d-flex justify-content-around list-inline text-right top-menu">
 					<li class="dropdown cart-nav dropdown-slide">
 						<a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"><i
 								class="tf-ion-android-cart"></i>Sepet</a>
