index.ejs half finish

--- a/views/section/private-search.ejs
+++ b/views/section/private-search.ejs
@@ -1,9 +1,53 @@
+<div class="container mt-3 mb-5">
 
-<section class="private-search container ">
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
+  <div class="row">
+    <div class="col-2">
+      <h6>Araç Seçiniz</h6>
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Araç Seçiniz</option>
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
       </select>
-</section>
+  
+  
+    </div>
+    <div class="col-2">
+      <h6>Model Seçiniz</h6>
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Model Seçiniz</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+  
+  
+    </div>
+    <div class="col-3">
+      <h6>Ürün Tipini Seçiniz</h6>
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Ürün Tipini Seçiniz</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+
+    <div class="col-3">
+      <h6>Araç Özellikleri</h6>
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Araç Özellikleri</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+
+    <div class="col-2">
+      <h6>Arama</h6>
+      <button type="button" class="btn btn-dark w-100">Ürünü Bul</button>
+
+    </div>
+
+  </div>
+</div>
