category and json add import

--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -1,15 +1,16 @@
-
-    <!-- 
+<!-- 
     Essential Scripts-->
-    
-    <!-- Main jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+<!-- Main jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 
-    <!-- Main Js File -->
-    <script src="js/script.js"></script>
-    
+<!-- Main Js File -->
+<script src="js/script.js"></script>
+
+<script type="module"  src="js/category.js"></script>
 
 
-  </body>
-  </html>
+</body>
+
+</html>
