--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -44,6 +44,7 @@
 
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/section/accordion.css">
 
 </head>
 
