--- a/views/section/products.ejs
+++ b/views/section/products.ejs
@@ -1,295 +1,80 @@
 <section class="products section bg-gray">
-	<div class="container">
-		<div class="row">
-			<div class="title text-center">
-				<h2>Ürünler</h2>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-3">
-                MENU
+    <div class="container">
+        <div class="row">
+            <div class="title text-center">
+                <h2>Ürünler</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+               <%- include('category.ejs') %>
             </div>
             <div class="col-8">
                 <div class="row">
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <span class="bage">Sale</span>
-                                <img class="img-responsive" src="images/shop/products/product-1.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#!" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Reef Boardsport</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-2.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Rainbow Shoes</a></h4>
-                                <p class="price">$200</p>
+                    <% products.forEach(product=> { %>
+                        <div class="col-md-3">
+                            <div class="product-item">
+                                <div class="product-thumb">
+                                    <span class="bage">Sale</span>
+                                    <img class="img-responsive" src="images/shop/products/product-1.jpg"
+                                        alt="product-img" />
+                                    <div class="preview-meta">
+                                        <ul>
+                                            <li>
+                                                <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="product-content">
+                                    <h4><a href="product-single.html">
+                                            <%= product.URUNADI %>
+                                        </a></h4>
+                                    <p class="price">
+                                        <%= product.SATISFIYATI %>
+                                            <%= product.PARABIRIMI %>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-3.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Strayhorn SP</a></h4>
-                                <p class="price">$230</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-4.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Bradley Mid</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-5.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Rainbow Shoes</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-6.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Rainbow Shoes</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <span class="bage">Sale</span>
-                                <img class="img-responsive" src="images/shop/products/product-7.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Rainbow Shoes</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-8.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Rainbow Shoes</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <img class="img-responsive" src="images/shop/products/product-9.jpg" alt="product-img" />
-                                <div class="preview-meta">
-                                    <ul>
-                                        <li>
-                                            <span  data-toggle="modal" data-target="#product-modal">
-                                                <i class="tf-ion-ios-search-strong"></i>
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
-                                        </li>
-                                    </ul>
-                                  </div>
-                            </div>
-                            <div class="product-content">
-                                <h4><a href="product-single.html">Rainbow Shoes</a></h4>
-                                <p class="price">$200</p>
-                            </div>
-                        </div>
-                    </div>
+                        <% }); %>
                 </div>
-           
-            
+
+                <!-- Sayfalama UI -->
+                <div class="d-flex justify-content-center pagination">
+                    <% if (currentPage> 1) { %>
+                        <a href="/?page=<%= currentPage - 1 %>" class="page-link rounded-start-4 ">&laquo; Önceki</a>
+                        <% } %>
+
+                            <% let startPage=Math.max(currentPage - 1, 1); %>
+                                <% let endPage=Math.min(currentPage + 1, totalPages); %>
+
+                                    <% if (startPage> 1) { %>
+                                        <% } %>
+
+                                            <% for(let i=startPage; i <=endPage; i++) { %>
+                                                <a href="/?page=<%= i %>"
+                                                    class="page-link <%= currentPage === i ? 'active ' : '' %>">
+                                                    <%= i %>
+                                                </a>
+                                                <% } %>
+
+                                                    <% if (endPage < totalPages) { %>
+                                                        <% } %>
+
+                                                            <% if (currentPage < totalPages) { %>
+                                                                <a href="/?page=<%= currentPage + 1 %>"
+                                                                    class="page-link rounded-end-4">Sonraki &raquo;</a>
+                                                                <% } %>
+                </div>
             </div>
-	
-
-
-
-
-
-		<!-- Modal -->
-		<div class="modal product-modal fade" id="product-modal">
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<i class="tf-ion-close"></i>
-			</button>
-		  	<div class="modal-dialog " role="document">
-		    	<div class="modal-content">
-			      	<div class="modal-body">
-			        	<div class="row">
-			        		<div class="col-md-8 col-sm-6 col-xs-12">
-			        			<div class="modal-image">
-				        			<img class="img-responsive" src="images/shop/products/modal-product.jpg" alt="product-img" />
-			        			</div>
-			        		</div>
-			        		<div class="col-md-4 col-sm-6 col-xs-12">
-			        			<div class="product-short-details">
-			        				<h2 class="product-title">GM Pendant, Basalt Grey</h2>
-			        				<p class="product-price">$200</p>
-			        				<p class="product-short-description">
-			        					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem iusto nihil cum. Illo laborum numquam rem aut officia dicta cumque.
-			        				</p>
-			        				<a href="cart.html" class="btn btn-main">Add To Cart</a>
-			        				<a href="product-single.html" class="btn btn-transparent">View Product Details</a>
-			        			</div>
-			        		</div>
-			        	</div>
-			        </div>
-		    	</div>
-		  	</div>
-		</div><!-- /.modal -->
-
-		</div>
-	</div>
+        </div>
+    </div>
 </section>
 
+<script>
+    // Sağa ve sola oklar için sayfa değiştirme işlevi
+    function changePage(page) {
+        window.location.href = `/?page=${page}`;
+    }
+</script>
