--- a/views/section/category.ejs
+++ b/views/section/category.ejs
@@ -1,7 +1,5 @@
 <div class="widget product-category">
     <h4 class="widget-title">Categories</h4>
-
-
-
-</div> 
-
+    <div id="categoryAccordion" class="accordion"></div>
+  </div>
+  
