--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,36 +1,24 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
 <html lang="en">
 
 <head>
 
-  <!-- Basic Page Needs
-  ================================================== -->
   <meta charset="utf-8">
   <title>Aviato | E-commerce template</title>
 
-  <!-- Mobile Specific Metas
-  ================================================== -->
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Construction Html5 Template">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="generator" content="Themefisher Constra HTML Template v1.0">
+  <meta name="author" content="Berkay">
 
-  <!-- theme meta -->
+
   <meta name="theme-name" content="aviato" />
 
 
   <link rel="stylesheet" href="plugins/themefisher-font/style.css">
 
-  <!-- bootstrap.min css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 
@@ -42,7 +30,6 @@
     crossorigin="anonymous"></script>
 
 
-  <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/section/accordion.css">
 
