--- a/views/admin/partials/bfoot.ejs
+++ b/views/admin/partials/bfoot.ejs
@@ -1,5 +1,9 @@
-  <!-- Bootstrap JS ve jQuery -->
- 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<!-- Bootstrap JS ve jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+<script src="js/admin/products.js"></script>
+
+
 </body>
+
 </html>
