--- a/views/admin/partials/bnavbar.ejs
+++ b/views/admin/partials/bnavbar.ejs
@@ -2,7 +2,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand ms-3" href="#">Admin Paneli</a>
+    <a class="navbar-brand ms-3" href="/admin">Admin Paneli</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Anasayfa</a>
+          <a class="nav-link" href="/admin">Anasayfa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Ürünler</a>
+          <a class="nav-link" href="/admin">Ürünler</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Siparişler</a>
