--- a/views/admin/department/homepage.ejs
+++ b/views/admin/department/homepage.ejs
@@ -5,7 +5,6 @@
           <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action active">Ürünler</a>
               <a href="/admin/createProduct.ejs" class="list-group-item list-group-item-action">Ürün Ekle</a>
-              <a href="" class="list-group-item list-group-item-action">Ürün Düzenle</a>
           </div>
       </div>
       <div class="col-md-9">
@@ -79,3 +78,25 @@
       </div>
   </div>
 </div>
+<script>
+    function confirmDelete(productId) {
+    if (confirm('Ürünü silmek istediğinizden emin misiniz?')) {
+        // AJAX isteği gönder
+        $.ajax({
+            url: "/products/" + productId + "/delete",
+            type: "DELETE",
+            success: function(data) {
+                alert("Ürün başarıyla silindi!");
+                // İsteğin başarıyla tamamlanması durumunda yapılacak işlemleri buraya ekleyebilirsiniz.
+            },
+            error: function(xhr, status, error) {
+                console.error(error);
+                alert("Ürün silinirken bir hata oluştu!");
+                // Hata durumunda yapılacak işlemleri buraya ekleyebilirsiniz.
+            }
+        });
+    } else {
+        alert('Silme işlemi iptal edildi.');
+    }
+}
+</script>
