--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -2,10 +2,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 
-<script src="js/script.js"></script>
+<script src="/js/script.js"></script>
 
-<script type="module"  src="js/category.js"></script>
-<script type="module"  src="js/private-search.js"></script>
+<script type="module"  src="/js/category.js"></script>
+<script type="module"  src="/js/private-search.js"></script>
 
 
 </body>
