--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,7 +17,7 @@
   <meta name="theme-name" content="aviato" />
 
 
-  <link rel="stylesheet" href="plugins/themefisher-font/style.css">
+  <link rel="stylesheet" href="/plugins/themefisher-font/style.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
@@ -30,8 +30,8 @@
     crossorigin="anonymous"></script>
 
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/section/accordion.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/section/accordion.css">
 
 </head>
 
