--- a/views/section/products.ejs
+++ b/views/section/products.ejs
@@ -21,13 +21,13 @@
                                     <div class="preview-meta">
                                         <ul>
                                             <li>
-                                                <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                                <a href="/product-detail/<%= product._id %>"><i class="tf-ion-android-cart"></i></a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="product-content">
-                                    <h4><a href="product-single.html">
+                                    <h4><a href="/product-detail/<%= product._id %>">
                                             <%= product.URUNADI %>
                                         </a></h4>
                                     <p class="price">
